load("@rules_java//java:defs.bzl", "java_library", "java_test")

# load(":deps.bzl", "TEST_DEPS")

java_library(
    name = "provided",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"], allow_empty = True,),
    visibility = ["//visibility:public"],
    javacopts = ["--release", "21"],
    deps = [
        "//util/common",
        "//util/collection",
        "//util/javaparser",
        "//util/future",
        "//serialization/traverser",
        "//engine/core",
        "//feature/execution",
        "//feature/injection",
    ],
)

java_test(
    name = "provided_test",
    srcs = glob(["src/test/java/**/*.java"]),
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    args = [
        "--select-package", "jadex.providedservice",
        "--fail-if-no-tests",
    ],
    deps = [
        ":provided",
        "//util/future",
        "//engine/core",
        "//feature/execution",
        "//feature/injection",
        "//util/common",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)
